--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     }
   },
   "scripts": {
-    "post-autoload-dump": "Embryo\\Embed\\Installer::writeCacheFile"
+    "writeCacheFile": "Embryo\\Embed\\Installer::writeCacheFile",
+    "post-autoload-dump": "@writeCacheFile",
+    "post-package-install": "@writeCacheFile",
+    "post-package-update": "@writeCacheFile"
   }
 }
