--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
       "email": "marc@brillault.fr"
     }
   ],
-  "require": {},
+  "require": {
+    "guzzlehttp/guzzle": "^6.3"
+  },
   "autoload": {
     "psr-4": {
       "Embryo\\": "src"
